--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 altair==4.2.0
+ansi2html==1.9.1
+appdirs==1.4.4
 appnope==0.1.3
 asttokens==2.0.8
 attrs==22.1.0
 Automat==20.2.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
-blinker==1.5
+beautifulsoup4==4.12.2
+blinker==1.7.0
 cachetools==5.2.0
 certifi==2022.9.24
 cffi==1.15.1
@@ -17,15 +20,24 @@ contourpy==1.0.6
 cryptography==38.0.1
 cssselect==1.1.0
 cycler==0.11.0
+dash==2.14.2
+dash-bootstrap-components==1.5.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 debugpy==1.6.3
 decorator==5.1.1
 entrypoints==0.4
 executing==1.1.1
 fastjsonschema==2.16.2
+feedparser==6.0.11
 filelock==3.8.0
+flask==3.0.0
 fonttools==4.38.0
+frozendict==2.3.10
 gitdb==4.0.10
 GitPython==3.1.29
+html5lib==1.1
 hyperlink==21.0.0
 idna==3.4
 importlib-metadata==5.2.0
@@ -35,6 +47,7 @@ ipykernel==6.16.1
 ipython==8.5.0
 itemadapter==0.7.0
 itemloaders==1.0.6
+itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -48,13 +61,16 @@ lxml==4.9.1
 MarkupSafe==2.1.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
+multitasking==0.0.11
 nbformat==5.7.1
 nest-asyncio==1.5.6
+nltk==3.8.1
 numpy==1.23.4
 packaging==21.3
 pandas==1.5.1
 parsel==1.6.0
 parso==0.8.3
+peewee==3.17.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.3.0
@@ -82,8 +98,10 @@ pytz==2022.5
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==24.0.1
 queuelib==1.6.2
-requests==2.28.1
+regex==2023.10.3
+requests==2.31.0
 requests-file==1.5.1
+retrying==1.3.4
 rich==12.6.0
 scikit-learn==1.2.0
 scipy==1.9.3
@@ -91,9 +109,12 @@ Scrapy==2.7.0
 seaborn==0.12.1
 semver==2.13.0
 service-identity==21.1.0
+sgmllib3k==1.0.0
 six==1.16.0
 smmap==5.0.0
+soupsieve==2.5
 stack-data==0.5.1
+stocknews==0.9.11
 streamlit==1.16.0
 tenacity==8.1.0
 threadpoolctl==3.1.0
@@ -101,6 +122,7 @@ tldextract==3.4.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
+tqdm==4.66.1
 traitlets==5.5.0
 Twisted==22.8.0
 typing-extensions==4.4.0
@@ -110,5 +132,8 @@ urllib3==1.26.12
 validators==0.20.0
 w3lib==2.0.1
 wcwidth==0.2.5
+webencodings==0.5.1
+werkzeug==3.0.1
+yfinance==0.2.33
 zipp==3.11.0
 zope.interface==5.5.0
